Added back the id for rtl8139C+. Tested succesfully under XenServer. Fixes ticket #5180 (or at least part of it)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35452 a95241bf-73f2-0310-859d-f6bbb57e9c96